--- a/views/modules/total-cost.html
+++ b/views/modules/total-cost.html
@@ -5,29 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/normalize.css">
     <title></title>
 </head>
 <body>
    <header class="info__total__cost">
            <div class="info__column title__cost__event">
-               <h1><span id="name--event">Nombre de mi evento</span></h1>
+               <h1><span id="name--event">CUMPLEAÑOS CAMILO</span></h1>
            </div>
            
    
            <div class="info__column date__event">
    
               <p>Fecha de orden: 
-                  <span class="infos" id="date--order">#####</span>
-                  <span class="infos" id="time--order">00:00</span>
+                  <span id="date--order">#####</span>
+                  <span id="time--order">00:00</span>
                </p>
    
               <p>Lugar del evento: 
-               <span class="infos" id="place--event">######</span>
+               <span id="place--event">######</span>
               </p>
    
               <p>Evento realizado el: 
-                <span class="infos" id="date--made--event">#####</span> 
-                <span class="infos" id="time--made--event">00:00</span>
+                <span id="date--made--event">#####</span> 
+                <span id="time--made--event">00:00</span>
                </p>
    
            </div>
@@ -39,7 +40,7 @@
         <section class="description__section">
       
           <div class="description__service">
-             <h2><span>Pastel para boda</span></h2>
+             <h2><span>Pastel de cumpleaños</span></h2>
              <p>Proveedor: ####</p>
           </div>  
       
@@ -76,7 +77,7 @@
             <h2>Resumen</h2>
 
            <div class="service_cost">
-              <p><span>Pastel para boda</span></p>
+              <p><span>Pastel de cumpleaños</span></p>
               <h3><span>$100.000</span></h3>
            </div>
 
@@ -102,13 +103,15 @@
            
       
            <div class="total__price">
-              <h3>Total:</h3>
+              <h2>Total:</h2>
               <h3>$300.000</h3>
             </div>
       
-      
-            <button>Reservar</button>
-      
+           <div class="container__button">
+              <button class="reserve__button" id="reserve">Reservar</button>
+           </div>
+
+
          </section>
 
     </main>
