--- a/views/modules/total-cost.html
+++ b/views/modules/total-cost.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/normalize.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
     <title></title>
 </head>
 <body>
@@ -35,8 +35,53 @@
     </header>
 
 
+
+
     <main class="info__service">
 
+
+
+      <section class="cost__section">
+      
+         <h2>Resumen</h2>
+
+        <div class="service_cost">
+           <p><span>Pastel de cumpleaños</span></p>
+           <h3><span>$100.000</span></h3>
+        </div>
+
+        <div class="service_cost">
+         <p><span>Catering</span></p>
+         <h3><span>$100.000</span></h3>
+        </div>
+
+        <div class="service_cost">
+           <p><span>Decoración</span></p>
+           <h3><span>$100.000</span></h3>
+        </div>
+   
+        <div class="service_cost">
+          <p><span>Comida/Bebida</span></p>
+          <h3><span>$100.000</span></h3>
+        </div>
+
+        <div class="service_cost">
+           <p><span>Aseo</span></p>
+           <h3><span>$100.000</span></h3>
+        </div>
+        
+   
+        <div class="total__price">
+           <h2>Total:</h2>
+           <h3>$300.000</h3>
+         </div>
+   
+        <div class="container__button">
+           <button type="submit" class="reserve__button" id="reserve">Reservar</button>
+        </div>
+
+
+      </section>
         <section class="description__section">
       
           <div class="description__service">
@@ -69,50 +114,6 @@
            </div>
       
          </section> 
-
-
-      
-         <section class="cost__section">
-      
-            <h2>Resumen</h2>
-
-           <div class="service_cost">
-              <p><span>Pastel de cumpleaños</span></p>
-              <h3><span>$100.000</span></h3>
-           </div>
-
-           <div class="service_cost">
-            <p><span>Catering</span></p>
-            <h3><span>$100.000</span></h3>
-           </div>
-
-           <div class="service_cost">
-              <p><span>Decoración</span></p>
-              <h3><span>$100.000</span></h3>
-           </div>
-      
-           <div class="service_cost">
-             <p><span>Comida/Bebida</span></p>
-             <h3><span>$100.000</span></h3>
-           </div>
-  
-           <div class="service_cost">
-              <p><span>Aseo</span></p>
-              <h3><span>$100.000</span></h3>
-           </div>
-           
-      
-           <div class="total__price">
-              <h2>Total:</h2>
-              <h3>$300.000</h3>
-            </div>
-      
-           <div class="container__button">
-              <button class="reserve__button" id="reserve">Reservar</button>
-           </div>
-
-
-         </section>
 
     </main>
 </body>
