--- a/views/modules/info-service.html
+++ b/views/modules/info-service.html
@@ -8,7 +8,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel="stylesheet" href="../assets/css/normalize.css">
   <link rel='stylesheet' type='text/css' media='screen' href='../assets/css/main.css'>
-  <script src='main.js'></script>
+  <script src='../assets/js/main.js'></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
       <div>
         <div class="info-service__details__header">
           <div class="info-service__details__header__title">
-            <h2>Habitación con vista a las montañas</h2>
+            <h2 id="NameService">Habitación con vista a las montañas</h2>
             <p>Oslo, Noruega</p>
           </div>
 
