--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -69,11 +69,11 @@ header>div {
 
 .nav-bar ul {
   position: absolute;
-  top: 2rem;
+  top: 2.5rem;
   right: 0;
   flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
+  margin: 0;
+  padding: 0;
   background-color: var(--white);
   border: 1px solid var(--primary);
   border-radius: 15px;
@@ -82,20 +82,26 @@ header>div {
 }
 
 .nav-bar ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 35px;
   list-style: none;
+  cursor: pointer;
 }
 .nav-bar ul li a {
   display: inline-block;
-  width: 100px;
+  width: 100%;
   border: none;
   background-color: transparent;
   color: var(--black);
   text-align: center;
   text-decoration: none;
-  cursor: pointer;
 }
 
-.nav-bar ul li a:hover {
+.nav-bar ul li:hover {
   background-color: rgba(118, 112, 230, 0.4);
 }
 
