refactor(app): Update info service styling

--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -822,7 +822,9 @@ select:invalid:focus {
 
 /* info Service */
 .info-service {
-  padding: 2rem;
+  width: 80%;
+  max-width: 900px;
+  margin: 2rem auto;
 }
 
 /* gallery */
