Js almost finished with a fetch template

--- a/views/modules/create-service.html
+++ b/views/modules/create-service.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+
+
   <section class="form-section">
 
     <div class="form__container">
@@ -32,7 +35,7 @@
         <label for="description-service" class="form__input">
           Descripcion:
           <!-- <span>description:</span>  -->
-          <textarea name="service-description" id="" cols="3" rows="5"></textarea>
+          <textarea name="service-description" id="description-service" cols="3" rows="5"></textarea>
           <!-- mensaje de error -->
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
@@ -71,6 +74,15 @@
         <label for="peopleAmount-service" class="form__input">
           <!-- <span>People amount:</span>  -->
           <input id="peopleAmount-service" type="number" name="peopleAmount-service" placeholder="Cantidad de personas">
+          <span class="inactive">Ingrese un valor valido.</span>
+        </label>
+
+        <!-- characteristics -->
+        <label for="characteristics-service" class="form__input">
+          Caracteriticas:
+          <!-- <span>description:</span>  -->
+          <textarea name="characteristics-description" id="characteristics-service" cols="3" rows="5"></textarea>
+          <!-- mensaje de error -->
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
