--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -1018,6 +1018,13 @@ select:invalid:focus {
   cursor: pointer;
 }
 
+/* favorite services */
+.favorite-services {
+  width: 100%;
+  max-width: 900px;
+  margin: 2rem auto;
+}
+
 @media (min-width: 768px) {
   .filer-bar {
     justify-content: space-evenly;
