--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -86,14 +86,14 @@ header>div {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 120px;
-  height: 35px;
   list-style: none;
   cursor: pointer;
 }
 .nav-bar ul li a {
   display: inline-block;
   width: 100%;
+  min-width: 150px;
+  padding: 0.5rem 1rem;
   border: none;
   background-color: transparent;
   color: var(--black);
