multiple file upload file data is working in controller, but model is still in progress

--- a/views/modules/create-service.html
+++ b/views/modules/create-service.html
@@ -24,7 +24,7 @@
 
         <!-- name -->
         <label for="name_company" class="form__input">
-          <input id="name-service" type="text" name="name-company" placeholder="Nombre Servicio"
+          <input id="name-service" type="text" name="name" placeholder="Nombre Servicio"
             onkeyup="validateInputData('name-company')">
           <!-- mensaje de error -->
           <span class="inactive">Ingrese un valor valido.</span>
